Changed tests Changed polygon-polygon collision